fixed spacing to 3 sites

--- a/style/hover.css
+++ b/style/hover.css
@@ -1,9 +1,6 @@
-header a.hovers:hover{
-    font-size: 3.3rem;
-}
 
-.card.light img.hovers:hover{
-    box-shadow: 0 10px 3px rgb(132, 158, 177);
+.light:hover{
+    box-shadow: rgb(132, 158, 177);
 }
 
 #aboutContainer div.hovers:hover *{
@@ -12,48 +9,31 @@ header a.hovers:hover{
     color: white;
 }
 
-#aboutContainer div.hovers:hover *.light{
+
+.hovers:hover{
+    font-size: 2.5rem;
+    color: white;
+    opacity: 100%;
+}
+
+.light.hovers:hover{
     color: black;
 }
 
-#aboutContainer div p.hovers:hover{
+.a11yButton:hover{
     color:#FFED5F;
 }
 
-#aboutContainer div p.light.hovers:hover{
-    color:rgb(90, 0, 0);
+.a11y:hover{
+    color:#ffed5f;
 }
 
-#contactContainer h3.hovers:hover{
-    font-size: 3rem;
-    color: #FFED5F;
+.a11yButton.light:hover{
+    color:#693106;
 }
 
-#contactContainer h3.light.hovers:hover{
-    color:rgb(255, 145, 0);
-}
-
-.contact.hovers:hover a{
-    font-size: 3.4rem;
-}
-
-.card.light.contact.hovers:hover img{
-    box-shadow: 0 10px 3px rgb(132, 158, 177);
-}
-
-.card.hovers:hover img {
-    opacity: 100%;
-}
-
-.card.hovers:hover h3 {
-    color:white;
-    letter-spacing: 0.1rem;
-    font-size: 2.5rem;
-    opacity: 100%;
-}
-
-.card.light.hovers:hover  h3{
-    color:rgb(0, 0, 0);
+.a11y.light:hover{
+    color:#693106;
 }
 
 @media (max-width: 700px){
@@ -70,7 +50,7 @@ header a.hovers:hover{
     }
 
     #aboutContainer div.hovers:hover p.light{
-        color:rgb(255, 145, 0);
+        color:black;
     }
 }
 
